RESOLVED FIXED40743
REGRESSION(r58875-r59046): Scrollable content drawn in wrong layer with Flash 10.1
https://bugs.webkit.org/show_bug.cgi?id=40743
Summary REGRESSION(r58875-r59046): Scrollable content drawn in wrong layer with Flash...
Lars Mikkelsen
Reported 2010-06-16 15:41:42 PDT
When scrolling the content of a div with "overflow-y: scroll" the div will be drawn in the wrong layer or disappear completely if the page contains a Flash object and multiple layers. This issue only reproduces on Mac OS X 10.6 with Flash 10.1. Based on nightly builds the regression window appears to be r58875-r59046.
Attachments
reduction.html (1.07 KB, text/html)
2010-06-16 15:43 PDT, Lars Mikkelsen
no flags
screenshots.png (59.63 KB, image/png)
2010-06-16 15:43 PDT, Lars Mikkelsen
no flags
Patch (6.50 KB, patch)
2010-09-08 18:22 PDT, Simon Fraser (smfr)
mitz: review+
Lars Mikkelsen
Comment 1 2010-06-16 15:43:16 PDT
Created attachment 58942 [details] reduction.html
Lars Mikkelsen
Comment 2 2010-06-16 15:43:48 PDT
Created attachment 58943 [details] screenshots.png
Simon Fraser (smfr)
Comment 3 2010-06-16 21:46:52 PDT
Simon Fraser (smfr)
Comment 4 2010-06-16 21:47:58 PDT
Thanks for the report and testcase.
Simon Fraser (smfr)
Comment 5 2010-09-08 16:12:28 PDT
Updating compositing layers from RenderLayer::scrollToOffset() is giving a different answer for the 'dialog1' layer.
Simon Fraser (smfr)
Comment 6 2010-09-08 17:43:22 PDT
Ah, we can't do partial layer updates with overlap testing.
Simon Fraser (smfr)
Comment 7 2010-09-08 18:22:20 PDT
Simon Fraser (smfr)
Comment 8 2010-09-09 10:16:09 PDT
Note You need to log in before you can comment on or make changes to this bug.