2010-09-09  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        REGRESSION(r58875-r59046): Scrollable content drawn in wrong layer with Flash 10.1
        https://bugs.webkit.org/show_bug.cgi?id=40743

        We can't do partial compositing layer updates on scrolling if we have to look
        for overlap, because the overlap map needs to be populated by traversing the
        compositing layer hierarchy from the root.

        Test: compositing/layer-creation/scroll-partial-update.html

        * rendering/RenderLayerCompositor.cpp:
        (WebCore::RenderLayerCompositor::updateCompositingLayers):

Canonical link: https://commits.webkit.org/57837@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67093 268f45cc-cd09-0410-ab3c-d52691b4dbfc